JumpScript/tests/baselines/reference/duplicateVariablesWithAny.errors.txt
tests/cases/compiler/duplicateVariablesWithAny.jump(3,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'any', but here has type 'number'.
tests/cases/compiler/duplicateVariablesWithAny.jump(6,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'y' must be of type 'string', but here has type 'any'.
tests/cases/compiler/duplicateVariablesWithAny.jump(10,9): error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'any', but here has type 'number'.
tests/cases/compiler/duplicateVariablesWithAny.jump(13,9): error TS2403: Subsequent variable declarations must have the same type.  Variable 'y' must be of type 'string', but here has type 'any'.


==== tests/cases/compiler/duplicateVariablesWithAny.jump (4 errors) ====
    // They should have to be the same even when one of the types is 'any'
    var x: any;
    var x = 2; //error
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'any', but here has type 'number'.
    
    var y = "";
    var y; //error
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'y' must be of type 'string', but here has type 'any'.
    
    module N {
        var x: any;
        var x = 2; //error
            ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'any', but here has type 'number'.
    
        var y = "";
        var y; //error
            ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'y' must be of type 'string', but here has type 'any'.
    }
    
    var z: any;
    var z; // ok